# OmniGen

./: .gitignore  README.md  VALIDATION_README.md  config_internvl.yaml  data_example.json  env_template.txt  filter_double_bond_only.py  filter_polymer_data.py  generate_benchmark.py  generate_image_pair.py  multimodal_cot.json  multimodal_cot_multimodal.json  multimodal_image_text_pair.json  multimodal_multi_qa_pair.json  multimodal_single_qa_pair.json  output.json  pyproject.toml  transform_polymer_data.py  validate_benchmark.py
main/: __init__.py  common.py  generate.py  validate.py
output/: benchmark.json  element_pred.json  feature_extract.json  group_recog.json  impurity_detect.json  modality_fusion.json  peak_assign.json  property_pred.json  quality_eval.json  structure_elucidate.json  type_cls.json
seed_datasets/molpuzzle/: meta_data.json
src/: __init__.py
src/config/: __init__.py  benchmark.yaml  config.py  cot.yaml  image_pair.yaml  image_pair_gemini.yaml  image_pair_interns1.yaml  qa_pair.yaml
src/core/: __init__.py  data_structures.py  engine.py  generation_engine.py  validator_engine.py
src/data_loaders/: __init__.py  base.py  data_structures.py  molecule.py  molpuzzle.py  registry.py  spectrum_loader.py
src/generators/: __init__.py  base.py  benchmark.py  cot_generator.py  image_pair_generator.py  qa_pair_generator.py
src/models/: __init__.py  base.py  base_api.py  gemini_api.py  interns1_api.py  internvl_api.py
src/validators/: __init__.py  base.py  benchmark_validator.py  cot_validator.py  image_pair_validator.py  qa_pair_validator.py  (+2 more)
(+3 files in other folders)
